--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "Astute Ordering system",
   "main": "app.js",
+  "engines": {
+    "node": "10.13.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
@@ -23,9 +26,11 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
+    "compression": "^1.7.3",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "mongodb": "^3.1.10",
-    "mongoose": "^5.4.0"
+    "mongoose": "^5.4.0",
+    "mongoose-type-email": "^1.0.10"
   }
 }
