--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "NODE_ENV=production MONGO_USER=naeem MONGO_PASSWORD=cattog123 MONGO_DEFAULT_DATABASE=webapp node app.js",
+    "start": "node app.js",
     "start-server": "node app.js"
   },
   "repository": {
