--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js",
-    "start-server": "node app.js"
+    "start": "nodemon app.js",
+    "start-server": "node app.js",
+    "start:dev": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -29,8 +30,10 @@
     "compression": "^1.7.3",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
+    "helmet": "^3.15.0",
     "mongodb": "^3.1.10",
     "mongoose": "^5.4.0",
-    "mongoose-type-email": "^1.0.10"
+    "mongoose-type-email": "^1.0.10",
+    "multer": "^1.4.1"
   }
 }
